--- a/static/sass/Profile/Profile.sass
+++ b/static/sass/Profile/Profile.sass
@@ -115,6 +115,7 @@
 					flex-direction: column
 					justify-content: center
 					align-items: center
+					flex: 1
 
 					.occupation
 						padding-bottom: 0.5rem
@@ -140,6 +141,7 @@
 						display: flex
 						flex: 1
 						width: 100%
+						text-align: center
 
 	.social-stats--wrapper
 		height: 0rem
